fleet/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-authentik-forwardauth@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # Homepage self-discovery annotations
    #gethomepage.dev/enabled: "true"
    #gethomepage.dev/name: "Homepage"
    #gethomepage.dev/description: "Application Dashboard"
    #gethomepage.dev/group: "Cluster Management"
    #gethomepage.dev/icon: "homepage.png"
spec:
  ingressClassName: traefik
  rules:
    - host: "home.vaclab.diarra.tech"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  tls:
    - secretName: homepage-tls
      hosts:
        - home.vaclab.diarra.tech
